# CatPos

./: README.md  dev.db  index.html  package-lock.json  package.json  prisma.config.ts  tsconfig.node.json  vite.config.ts
installer/: MakeInstaller.ps1  app_installer.iss
installer/installer_build/app/: index.html
installer/installer_build/app/assets/: index-B9ZFvvfO.css  index-DOUD7a1q.js
prisma/: schema.prisma
prisma/migrations/20260527040808_init/: migration.sql
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src/modules/app/components/: ClockBadge.tsx
src/modules/app/pages/: DashboardPage.tsx  MenuPage.tsx
src/modules/fiados/pages/: FiadosPage.tsx
src/modules/fiados/store/: fiados.store.ts
src/modules/fiados/types/: fiado.types.ts
src/modules/pos/components/: CheckoutModal.tsx  QuickProductModal.tsx
src/modules/pos/pages/: POSPage.tsx
src/modules/pos/store/: cart.store.ts
src/modules/pos/types/: cart.types.ts  product.types.ts
src/modules/pos/utils/: currency.ts  openfood.ts
src/modules/products/components/: ExcelImportModal.tsx  ProductForm.tsx
src/modules/products/pages/: ProductsPage.tsx
src/modules/products/store/: products.store.ts
src/modules/products/types/: product-form.types.ts
src/modules/sales/pages/: SalesHistoryPage.tsx
src/modules/sales/store/: sales.store.ts
src/modules/sales/types/: sales.types.ts
src/modules/suppliers/pages/: SuppliersPage.tsx
src/modules/suppliers/store/: suppliers.store.ts
src/modules/suppliers/types/: supplier.types.ts
(+2 files in other folders)
